--- a/templates/index.html
+++ b/templates/index.html
@@ -16,6 +16,13 @@
             <div class="card mt-4 ">
                 <div class="card-body text-center back">
                     <div class="container">
+                     {%if msg%}
+                    <div class="alert alert-success alert-dismissible fade show" role="alert">
+                         <strong>{{msg}}</strong>  registered successfully
+                         <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+                    </div>
+                    {%endif%}
+
                         <h6 class="txt">STUDENT REGISTERATION</h6>
                     </div>
                     <form action="/"method="post">
@@ -35,6 +42,12 @@
             
         </div>
         <div class="col text-center mt-4">
+            {%if name%}
+            <div class="alert alert-danger alert-dismissible fade show" role="alert">
+                <strong>{{name}}</strong>  Deleted successfully
+                <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+              </div>
+            {%endif%}
             <table class="table table-striped-columns table-dark">
                 <thead>
                     <tr>
@@ -58,7 +71,7 @@
                              <td>{{st.course}}</td>
                              <td>{{st.duration}}</td>
                              <td colspan="2"><button class="btn btn-warning"><i class="fa-solid fa-square-pen"></i></button>
-                            <button class="btn btn-danger"><i class="fa-solid fa-eraser"></i></button></td>
+                            <a href="/delete/{{st.sno}}" class="btn btn-danger"><i class="fa-solid fa-eraser"></i></a></td>
 
 
                         </tr>
