--- a/templates/index.html
+++ b/templates/index.html
@@ -48,6 +48,12 @@
                 <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
               </div>
             {%endif%}
+            {%if upd_name%}
+            <div class="alert alert-success alert-dismissible fade show" role="alert">
+                <strong>{{upd_name}}</strong>  updated successfully
+                <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+              </div>
+            {%endif%}
             <table class="table table-striped-columns table-dark">
                 <thead>
                     <tr>
@@ -68,11 +74,37 @@
                              <td>{{st.add}}</td>
                              <td>{{st.course}}</td>
                              <td>{{st.duration}}</td>
-                             <td colspan="2"><button class="btn btn-warning"><i class="fa-solid fa-square-pen"></i></button>
+                             <td colspan="2"><button type="button" data-bs-toggle="modal" data-bs-target="#exampleModal{{st.sno}}" class="btn btn-warning"><i class="fa-solid fa-square-pen"></i></button>
                             <a href="/delete/{{st.sno}}" class="btn btn-danger"><i class="fa-solid fa-eraser"></i></a></td>
-
-
                         </tr>
+                        <div class="modal fade" id="exampleModal{{st.sno}}" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+                            <div class="modal-dialog">
+                              <div class="modal-content">
+                                <div class="modal-header">
+                                  <h1 class="modal-title fs-5" id="exampleModalLabel">Modal title</h1>
+                                  <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                                </div>
+                                <div class="modal-body">
+                                  <form action="/update/{{st.sno}}" method="post">
+                                    <input type="text" name="username" class="form-control my-3" required placeholder="enter name" value="{{st.name}}" >
+                                    <input type="number" name="age" class="form-control my-3" required placeholder="enter age" value="{{st.age}}">
+
+                                    <input type="text" name="add" class="form-control my-3"  required placeholder="enter address" value="{{st.add}}" >
+                                    <input type="text" name="course" class="form-control my-3" required placeholder="enter course" value="{{st.course}}">
+                             
+                                  <input type="text" name="duration" class="form-control my-3" required placeholder="enter duration" value="{{st.duration}}"> 
+                        
+                    
+                                </div>
+                                <div class="modal-footer">
+                                  <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                                  <button type="submit" class="btn btn-primary">Save changes</button>
+                                  </form>
+                                </div>
+                              </div>
+                            </div>
+                          </div>
+                   
                         {%endfor%}
                     </tbody>
                 </thead>
